--- a/scripts/core/build.xml
+++ b/scripts/core/build.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="" basedir="." default="...">
     <target name="readme" hidden="true">
-        <exec command="cat README.md" dir="${build.path}" outputProperty="readme" />
-        <echo msg="================================================================================" />
-        <echo msg="================================================================================" />
-        <echo msg="README:" />
-        <echo msg="${readme}" />        
-        <echo msg="[ends" />
+        <echo msg="===================================" />
+        <echo msg="===================================" />
+        <echo msg="==== NOTHING HAPPENED =============" level="warning" />
+        <echo msg="" level="warning" />
+        <echo msg="     phing -l to see what to do" level="warning" />
+        <echo msg="" level="warning" />
+        <echo msg="===================================" />
+        <echo msg="===================================" />
     </target>
     
     <target name="build:skel" description="Applies configuration to skel files" depends="needConfiguration">
