Update stability settings

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
             "url": "http://pear.php.net"
         }
     ],
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "Ev\\Phingy": "src/"
