--- a/scripts/core/build.xml
+++ b/scripts/core/build.xml
@@ -149,7 +149,7 @@
             <os family="mac" />
             <then>
                 <echo message="On OSX, symlinking to /etc/apache2/vhosts..." />
-                <exec command="sudo ln -s ${build.server_config} /etc/apache2/vhosts/${build.name}.include" />
+                <exec command="sudo ln -sf ${build.server_config} /etc/apache2/vhosts/${build.name}.include" />
                 <echo message="...done." />
                 <echo message="Reloading Apache config..." />
                 <exec command="sudo apachectl reload" />
@@ -157,7 +157,7 @@
             </then>
             <else>
                 <echo message="On Linux, symlinking to /etc/apache2/sites-enabled..." />
-                <exec command="sudo ln -s ${build.server_config} /etc/apache2/sites-enabled/${build.name}.include" />
+                <exec command="sudo ln -sf ${build.server_config} /etc/apache2/sites-enabled/${build.name}.include" />
                 <echo message="...done." />
                 <echo message="Reloading Apache config..." />
                 <exec command="sudo service apache2 reload" />
