Change namespace to Tev, switch to PSR-4

--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
     },
 
     "autoload": {
-        "psr-0": {
-            "Ev\\Phingy": "src/"
+        "psr-4": {
+            "Tev\\": "src/Tev"
         }
     },
 
