--- a/scripts/core/build.xml
+++ b/scripts/core/build.xml
@@ -144,25 +144,12 @@
         </if>
         <echo message="...done." />
 
-        <if>
-            <os family="mac" />
-            <then>
-                <echo message="On OSX, symlinking to /etc/apache2/vhosts..." />
-                <exec command="sudo ln -sf ${build.server_config} /etc/apache2/vhosts/${build.name}.conf" />
-                <echo message="...done." />
-                <echo message="Reloading Apache config..." />
-                <exec command="sudo apachectl reload" />
-                <echo message="...done." />
-            </then>
-            <else>
-                <echo message="On Linux, symlinking to /etc/apache2/sites-enabled..." />
-                <exec command="sudo ln -sf ${build.server_config} /etc/apache2/sites-enabled/${build.name}.conf" />
-                <echo message="...done." />
-                <echo message="Reloading Apache config..." />
-                <exec command="sudo service apache2 reload" />
-                <echo message="...done." />
-            </else>
-        </if>
+        <echo message="Symlinking to /etc/apache2/sites-enabled..." />
+        <exec command="sudo ln -sf ${build.server_config} /etc/apache2/sites-enabled/${build.name}.conf" />
+        <echo message="...done." />
+        <echo message="Reloading Apache config..." />
+        <exec command="sudo service apache2 reload" />
+        <echo message="...done." />
     </target>
 
 
