Update env name options for TYPO3 by default

--- a/scripts/core/build.xml
+++ b/scripts/core/build.xml
@@ -78,8 +78,8 @@
             <then>
                 <propertyPrompt
                     propertyName="build.environment"
-                    defaultValue="development"
-                    promptText="Environment"
+                    defaultValue="Development"
+                    promptText="Environment (Development/Production)"
                     useExistingValue="true"
                 />
 
