Readded TaskRefs from V1

--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -2,6 +2,16 @@
 <project name="build" basedir="." default="readme">
     <exec command="pwd" dir="." checkreturn="true" outputProperty="build.path" />
     <property name="phingy.path" value="${build.path}/vendor/3ev/phingy" />
+    
+    <!-- ==================================== -->
+    <!--              Taskdefs                -->
+    <!-- ==================================== -->
+    <taskdef name="phingy:assets:wordpress:addsalt" classname="Tev\Phingy\Tasks\Wordpress\GenerateSaltTask" />
+    <taskdef name="phingy:assets:sass:update" classname="Tev\Phingy\Tasks\Assets\Sass\UpdateTask" />
+    <taskdef name="phingy:assets:sass:watch" classname="Tev\Phingy\Tasks\Assets\Sass\WatchTask" />
+    <taskdef name="phingy:assets:browserify" classname="Tev\Phingy\Tasks\Assets\BrowserifyTask" />
+    <taskdef name="phingy:assets:watchify" classname="Tev\Phingy\Tasks\Assets\WatchifyTask" />
+    <taskdef name="phingy:assets:uglifyjs" classname="Tev\Phingy\Tasks\Assets\UglifyJsTask" />
 
     <!-- ==================================== -->
     <!--            Core Imports              -->
